--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.15.3",
     "swiper": "^11.1.15",
+    "typewriter-effect": "^2.21.0",
     "yet-another-react-lightbox": "^3.21.7"
   },
   "devDependencies": {
